--- a/style.css
+++ b/style.css
@@ -2,31 +2,9 @@ html {
     scroll-behavior: smooth;
 }
 
-section {
-    border: 1px solid red;
-}
-
-.header-container {
-    max-width: 1440px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.section {
-    padding: 75px 75px;
-}
-
-.container {
-    margin: 0 auto;
-    max-width: 1440px;
-    padding-left: 20px;
-    padding-right: 20px;
-}
-
 li {
     list-style: none;
-    padding: 10px;
+    padding: 30px;
 }
 
 ul {
@@ -34,4 +12,61 @@ ul {
     justify-content: space-between;
     align-items: center;
     max-width: 720px;
+}
+
+nav {
+    font-family: Roboto;
+    font-size: 22px;
+    color: #FFFFFF;
+}
+
+.section {
+    padding: 75px 75px;
+    border: 1px solid red;
+}
+
+.container {
+    margin: 0 auto;
+    max-width: 1140px;
+    width: calc(100% - 40px);
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    align-items: center;
+}
+
+.container-visiting {
+    margin: 0 auto;
+    max-width: 1140px;
+    width: calc(100% - 40px);
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    align-items: center;
+}
+
+.container-tour {
+    margin: 0 auto;
+    max-width: 1140px;
+    width: calc(100% - 40px);
+    display: flex;
+    justify-content: space-between;
+    /* flex-direction: row; */
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.header-container {
+    /* max-width: 1440px; */
+    background-color: black;
+}
+
+.welcome-section {
+    font: bold 24px Arial rgb(255, 255, 255);
+    background-color: black;
+    background-position: calc(100% - 20px) calc(100% - 10px);
+}
+
+.explore-section {
+    background-color: black;
 }
